# OCSASim

./: .dockerignore  .gitignore  CLAUDE.md  OCSASim_config.json  README.md  csapitester.http  docker-compose.yml  main.py  pyproject.toml  stress_oshconnect.py
docker/osh-builder/: Dockerfile
docker/osh-builder/gradle/: build.gradle  settings.gradle
docker/osh-node/: Dockerfile
docker/osh-node/config/: config.json
docker/sim/: Dockerfile
examples/: sim_config.docker.json  sim_config.json
sims/: controllable_counter_sim.py  custom_sim.py  external_device_sim.py  gps.py  lineofbearing.py  sim.py
web/: api.py  app.py  mqtt_bridge.py  node_manager.py  sim_registry.py
web/static/: builder.html  index.html
