[project]
name = "OCASim"
version = "0.1.0"
authors = [
    {name="Ian Patterson", email = "ian@botts-inc.com"}
]
requires-python = ">=3.12"
dependencies = [
    "oshconnect>=0.4.0a0",
    "requests",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "websockets>=12.0",
]

# ── Local PyPI index (default source for oshconnect) ───────────────────────
# Start the dockerized local PyPI before `uv sync`:
#     cd ../OSHConnect-Python && docker compose up -d
#     ./scripts/publish-local.sh
#
# Opt out: to fall back to a local wheel instead of the local PyPI,
# replace the [tool.uv.sources] block below with:
#
# [tool.uv.sources]
# oshconnect = { path = "/Users/cr31/PycharmProjects/OSHConnect-Python/dist/oshconnect-0.4.0a0-py3-none-any.whl" }

[[tool.uv.index]]
url = "http://localhost:8090/simple/"
name = "local"

[tool.uv.sources]
oshconnect = { index = "local" }