[project]
name = "OCASim"
version = "0.1.0"
authors = [
    {name="Ian Patterson", email = "ian@botts-inc.com"}
]
requires-python = ">=3.12"
dependencies = [
    "oshconnect==0.5.1a0.dev9",
    "requests",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "websockets>=12.0",
]

# ── oshconnect comes from test.pypi.org ────────────────────────────────────
# `explicit = true` keeps test.pypi out of resolution for any other dep —
# uv only consults it for packages pinned to this index in [tool.uv.sources].
#
# To fall back to a local wheel for development, replace this block with:
#
# [tool.uv.sources]
# oshconnect = { path = "/Users/cr31/PycharmProjects/OSHConnect-Python/dist/oshconnect-0.5.1a0.dev9-py3-none-any.whl" }

[[tool.uv.index]]
url = "https://test.pypi.org/simple/"
name = "testpypi"
explicit = true

[tool.uv.sources]
oshconnect = { index = "testpypi" }