[project]
name = "OCASim"
version = "0.1.0"
authors = [
    {name="Ian Patterson", email = "ian@botts-inc.com"}
]
requires-python = ">=3.12"
dependencies = [
    "oshconnect==0.5.1a0.dev9",
    "requests",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "websockets>=12.0",
]

# ── oshconnect comes from test.pypi.org ────────────────────────────────────
# `explicit = true` keeps test.pypi out of resolution for any other dep —
# uv only consults it for packages pinned to this index in [tool.uv.sources].
#
# To fall back to a local wheel for development, replace this block with:
#
# [tool.uv.sources]
# oshconnect = { path = "/Users/cr31/PycharmProjects/OSHConnect-Python/dist/oshconnect-0.5.1a0.dev9-py3-none-any.whl" }

[[tool.uv.index]]
url = "https://test.pypi.org/simple/"
name = "testpypi"
explicit = true

[tool.uv.sources]
oshconnect = { index = "testpypi" }

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "__pycache__",
    "stress",
    "multiprocessing",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line-too-long (formatter handles it)
]

[tool.ruff.lint.per-file-ignores]
"web/api.py" = ["B008"]  # FastAPI uses Body()/Depends() in defaults by design

[tool.ruff.format]
quote-style = "double"
indent-style = "space"